--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -1,10 +1,10 @@
 .line-clamp {
     display: box;
+    display: box;
     -webkit-box-orient: vertical;
     overflow: hidden;
     -webkit-line-clamp: 1;
     word-break: keep-all;
- 
 }
 
 .line-clamp-4 {
