--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -1,5 +1,5 @@
 .line-clamp {
-    display: box;
+    display: flex;
     /* stylelint-disable */
     display: -webkit-box;
     /* stylelint-enable */
