--- a/styles/_module-utils.scss
+++ b/styles/_module-utils.scss
@@ -1,3 +1,4 @@
+$enable-negative-margins: true;
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 @import "../node_modules/bootstrap/scss/functions";
 
