--- a/components/blogs-page/components/feed/style.module.scss
+++ b/components/blogs-page/components/feed/style.module.scss
@@ -1,4 +1,15 @@
-.feedCard {
-  width: 800px;
-  
+.feedCardContainer {
+  width: 100%;
+
+  .feedCard {
+    height: 300px;
+  }
+
+  .cardBody {
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    text-shadow: 0 0 5px black;
+  }
 }
